Add some initial styling for homepage

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,7 +15,7 @@
         <h1>Complete tasks with <em>style.</em></h1>
     </main>
     <footer>
-        <p>Do more with POMPY-DO.</p>
+        <p>Do more with POMPY-DO. <a href="/">Learn more</a></p>
     </footer>
 </body>
 </html>
